# cleanroom

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: check-network-deps.sh
.github/workflows/: ci.yml  nightly.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/scripts/: generate-demo-file.mjs  make-mac-dmg.mjs  package-portable.mjs  sign-mac.mjs  verify-mac-bundle.mjs
apps/desktop/src/: App.tsx  Waveform.tsx  api.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.macos.plist  entitlements.mac.plist  installer-hooks.nsh  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: batch.rs  clip_studio.rs  diagnostics.rs  export.rs  guard.rs  lib.rs  main.rs  metadata.rs  models.rs  multitrack.rs  presets.rs  settings.rs  shownotes.rs  transcript.rs  watch.rs
apps/desktop/src/components/: CutReviewList.tsx  ExportPanel.tsx  HealthCard.tsx  LoudnessMeters.tsx  MasterPanel.tsx  ModuleChips.tsx  NavRail.tsx  Onboarding.tsx  PresetPicker.tsx  RightPanel.tsx  Switch.tsx  TrackLane.tsx  TranscriptWords.tsx  WaveformCutOverlay.tsx
apps/desktop/src/lib/: format.ts  nav.ts  presets.ts  speakers.ts  useModelDownloads.ts  usePlayhead.ts  usePresets.ts
apps/desktop/src/screens/: BatchScreen.tsx  ClipStudioScreen.tsx  MetadataScreen.tsx  ModelsScreen.tsx  MultitrackScreen.tsx  PresetsScreen.tsx  RecordingGuardScreen.tsx  SettingsScreen.tsx  TranscriptScreen.tsx  WatchScreen.tsx
apps/desktop/src/styles/: index.css
crates/anvil-ai/: Cargo.toml  build.rs
crates/anvil-ai/examples/: denoise_wav.rs
crates/anvil-ai/src/: denoise.rs  dereverb.rs  dfn3.rs  lib.rs  rnnoise.rs  stft.rs  studio.rs
crates/anvil-asr/: Cargo.toml
crates/anvil-asr/src/: diarize.rs  error.rs  lib.rs  model.rs  pin.rs  sidecar.rs
crates/anvil-asr/tests/: bundled_layout.rs  diarize.rs  transcribe.rs
crates/anvil-asr/tests/fixtures/: make-synthetic-diarization-fixture.ps1
crates/anvil-audio/: Cargo.toml
crates/anvil-audio/src/: engine.rs  lib.rs  peaks.rs  resample.rs
crates/anvil-batch/: Cargo.toml
crates/anvil-batch/src/: catalog.rs  error.rs  lib.rs  queue.rs
crates/anvil-batch/src/watch/: mod.rs  processed_log.rs  rule.rs  stability.rs
crates/anvil-cli/: Cargo.toml
crates/anvil-cli/src/: main.rs
crates/anvil-core/: Cargo.toml
crates/anvil-core/src/: error.rs  job.rs  lib.rs
crates/anvil-core/src/platform/: macos.rs  mod.rs  stub.rs  windows.rs
crates/anvil-cut/: Cargo.toml
crates/anvil-cut/src/: filler.rs  lib.rs  render.rs  silence.rs
crates/anvil-dsp/: Cargo.toml
crates/anvil-dsp/src/: analysis.rs  ar.rs  autoeq.rs  biquad.rs  breath.rs  chain.rs  declick.rs  declip.rs  deess.rs  dehum.rs  dither.rs  error.rs  hash.rs  hpf.rs  leveler.rs  lib.rs  limiter.rs  speaker.rs  stream.rs
crates/anvil-dsp/tests/: master_end_to_end.rs
crates/anvil-llm/: Cargo.toml
crates/anvil-llm/src/: chunk.rs  error.rs  fallback.rs  lib.rs  model.rs  parse.rs  pipeline.rs  prompt.rs  rubric.rs  sidecar.rs
crates/anvil-llm/tests/: real_generation.rs  sidecar_spawn.rs
crates/anvil-media/: Cargo.toml
crates/anvil-media/src/: clip.rs  decode.rs  encode.rs  encode_stream.rs  error.rs  lib.rs  metadata.rs  probe.rs  sidecar.rs  video.rs
crates/anvil-media/tests/: bundled_layout.rs  clip.rs  decode.rs  encode.rs  metadata.rs  sidecar_pin.rs  video.rs
crates/anvil-models/: Cargo.toml
crates/anvil-models/src/: lib.rs
crates/anvil-multitrack/: Cargo.toml
crates/anvil-multitrack/src/: align.rs  crossgate.rs  duck.rs  error.rs  lib.rs  mix.rs  testfix.rs  track.rs  vad.rs
crates/anvil-project/: Cargo.toml
crates/anvil-project/src/: autosave.rs  compliance.rs  edl.rs  lib.rs  preset.rs  project.rs  voice_memory.rs
docs/: licenses.md
docs/adr/: 001-stack.md  002-processing-pipeline.md  003-determinism.md  004-ai-model-matrix.md  005-media-io.md  006-platform-layer.md  007-cli.md  008-project-data-model.md  009-privacy-security.md  010-process-model.md  011-windows-packaging.md  012-mac-packaging.md  README.md
eval/: README.md  anvil_cli.py  conftest.py  requirements.txt  run.py  synth.py
eval/corpus/: manifest.example.json
eval/metrics/: __init__.py  dnsmos.py  intrusive.py  leveler.py  loudness.py
eval/tests/: test_anvil_cli.py  test_dnsmos.py  test_intrusive.py  test_leveler.py  test_loudness.py  test_run.py  test_synth.py
handoff/: 01-PRODUCT.md  02-ARCHITECTURE.md  03-DSP-SPEC.md  04-FEATURES-UX.md  05-MILESTONES.md  06-QUALITY-EVAL.md  07-RISKS-LEGAL.md  08-MAC.md  README.md
scripts/: build-ffmpeg-macos.sh  build-whisper-macos.sh  fetch-ffmpeg.ps1  fetch-sherpa-macos.sh  fetch-sherpa.ps1  fetch-whisper.ps1  ffmpeg-pin.json  sherpa-pin.json  stage-directml.ps1  stage-mac-sidecars.sh  whisper-pin.json
scripts/licenses/: titanet-small-ATTRIBUTION.txt
