[package]
name = "anvil-asr"
description = "Cleanroom speech recognition (ADR-004): whisper.cpp + sherpa-onnx diarization sidecars — word timestamps, speakers, model manager."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anvil-core.workspace = true
serde.workspace = true
# Neither whisper.cpp nor sherpa-onnx is linked (no whisper-rs, no sherpa-rs, no bindgen/MSVC
# link step): both run as external child processes — `whisper-cli` (see `sidecar`) and
# `sherpa-onnx-offline-speaker-diarization` (see `diarize`) — mirroring `anvil-media`'s ffmpeg
# sidecar. So the deps here are only for shelling out, parsing output, and hashing models.
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
